# path-planning

./: .gitignore
src/basic_movement/: CMakeLists.txt  package.xml
src/basic_movement/src/: path_publisher.cpp  turtlebot_controller.cpp
src/environment_map/: CMakeLists.txt  package.xml
src/environment_map/src/: a_star_search.cpp  grid_flattener.cpp
src/path_interfaces/: CMakeLists.txt  package.xml
src/path_interfaces/action/: ASearchQuery.action  PathQuery.action
src/path_interfaces/msg/: FlatGrid.msg  PathFeedback.msg  PathQuery.msg  Query.msg
